samples/_failures_safe/1761129081_326dac_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_43ba279f.c: In function ‘main’:
./samples/SAFE/__tmp_43ba279f.c:150:19: error: expected ‘;’ at end of input
  150 |             printf
      |                   ^
      |                   ;
./samples/SAFE/__tmp_43ba279f.c:150:13: error: expected declaration or statement at end of input
  150 |             printf
      |             ^~~~~~
./samples/SAFE/__tmp_43ba279f.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_43ba279f.c:150:13: error: expected declaration or statement at end of input
